--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <h1>东北故事</h1>
     <p>Dongbei Story<br/></p>
-    <a herf="000-000.html">☞ 《叁捌年》</a>
+    <a href="000-000.html">☞ 《叁捌年》</a>
   </body>
 </html>
