--- a/000-000.html
+++ b/000-000.html
@@ -12,7 +12,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;实验现象:无明显现象<br />
 &nbsp;&nbsp;&nbsp;&nbsp;实验结论:实验白给了<br />
 &nbsp;&nbsp;他换了身衣服,准备出门散散步,虽然外面什么也没有,距离喧嚣的城市也很远,出于保密,就算坐车得绕好几个弯才能出去.<br />
-      最后更新于2021/05/14 <b>S</b>
+      最后更新于2021/05/14 <b>Fri</b>
     </p>
   </body>
 </html>
