--- a/000-000.html
+++ b/000-000.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <a href="index.html">BACK</a>
+    <h1><b>叁捌年</b> 作者:寄言</h1>
     <p><b>第一章</b><br/></p>
     <p>
       &nbsp;&nbsp;2079年的12月中旬,一个寒冷的冬天,偏僻的卡兹叻坦山里显得更加空旷,而我们的主人公----王垠就在这里工作.他的主要任务就是把上面下发的任务完成,通常是一些高危的试验.他要研究上个世纪的发现和发明,就是阴极射线(高密度电子流).这个被现在认为是高压危险的东西竟然被上个世纪广泛使用,也就是显像管显示器.由于这种技术过于耗能,在2010才逐渐被液晶显示屏淘汰掉.而王垠缺喜欢这类东西,他喜欢玩弄各种射线,以至于反应仓的防护铅板上出现了黄金形成的斑点.(铅与金的原子质量相近,可以通过核裂变铅得到金)<br />
