--- a/000-000.html
+++ b/000-000.html
@@ -3,7 +3,7 @@
     <meta charset="ISO-8859-1">
   </head>
   <body>
-    <a href="index.html">BACK</a>
+    <a href="000.html">BACK</a>
     <h1><b>叁捌年</b> 作者:寄言</h1>
     <p><b>第一章</b><br/></p>
     <p>
