--- a/000-000.html
+++ b/000-000.html
@@ -24,6 +24,29 @@
 &nbsp;&nbsp;王垠的表情有点沮丧,摸了摸身上,隐隐约约感到一股火辣辣的疼.他把刚鞋提上就把另一只脚迈出了房门,于是经过了脚背和门槛的亲密接触之后,他摔
       倒了.他的头重重地磕在了地板上,但是有一股强大的力量把他弹起来,把他摔到的力量抵消了,同时在他的脑门上冒出了一大团蓝色的像电流一样的辉光.这种
       辉光遍布了整个房间,照亮了周围的景物.由于他受到了两股强大的力量的冲击,他直接昏睡了过去.<br/>
+&nbsp;&nbsp;这个时候,王垠仿佛自己已经来到了一个不可能的世界.他看见了前面有一座由不可能图形构成的宫殿,整个宫殿都是用铸铜和鎏金制成的,和橙色带有
+      一些白色星星的天空组成成为一座虚无的风景,楼梯和栏杆也是由不可能图形构成的,他想要数一数上面的栏杆,当他眯着眼睛去认真数,宫殿就变得模糊不清,
+      天空由橙色变为蓝色,和宫殿的影像交融在了一起.突然,他感到天旋地转,以为是地震,他就惊恐地满地乱爬,连忙爬到宫殿的一个柱子底下,此时的天空已经转
+      变成了茶色,像茶包泡在热水里,逐渐变得黑暗,浓云也在不断地变换形状.过了一会儿,他觉得好像有人吹号,这种声音一直萦绕在王垠的耳边,同时大地摇晃得
+      更厉害了,声音逐渐变得刺耳,但不一会又变得圆滑,王垠仔细地捂着耳朵仔细听了一遍又一遍这烦人的声响,才听出来这是被拉长的呼唤声,一直在喊着他的名
+      字.<br />
+&nbsp;&nbsp;最后,摇晃终于停止了,但是取之而来的是狂风和暴雨,天空黑了下来,伸手都不见五指,他顿时害怕极了,天空中划过一道粉色的雷,照亮了大地.就这样,
+      他借助着这微弱又奇怪的光源进入了宫殿,但是这个宫殿又好像不太欢迎他,他一进门上面就掉下来了一个装满冰水的水桶,浇了个落汤鸡.王垠挤了挤衣服上的
+      水,继续向前漫步走.雷声逐渐退幕,地板上逐渐多了一些黄色的光,他把手伸下去,感受这个奇怪的光.这个光很奇怪,被它照过的东西都只有黄色和黑色的区分
+      ,没有其他的颜色.他继续走,空气逐渐变得静悄,他呼吸有一丝紊乱,感到有一点害怕,想要逃出去,但是为了满足自己的猎奇,还是把脚步向前踏去了.前面有两
+      个会发光的东西吸引了他的注意,"看起来像是几支蜡烛."他自言自语道.心脏跳动声交织着脚步声成为这寂静宫殿唯一的背景音乐,前面的两束火焰好像跟随
+      着这种节奏舞动着.他加快脚步,想要快点到达前面.终于啊,他见到了那两团奇怪的火焰,这个火焰整个是黑色的,下面用陶瓷小碟垫着,上面落了好多灰尘,就
+      像两个穿着黑色舞服的芭蕾舞女依照着内心的节奏雅然起舞,他的眼神,心灵和精神都被这奇怪的火焰吸引住了,一动不动,就蹲着看着这两团火焰.除了火焰受
+      到气流冲击产生的扑扑声,他好像还听到了弹簧跟弹片碰撞产生的滴答声.他由于受到美丽火焰的吸引,没有特意去转头过去看滴答声的来源,而是继续观察着火
+      焰,随着滴答声辅佐,他感到自己内心平静无比.<br />
+&nbsp;&nbsp;过了一段时间,他有点疲惫了,不是身体上的疲劳,而是审美层面上的审美疲劳.他决定去看一看滴答声的源头.他站起身来,拍了拍大腿上的土,去寻找滴
+      答声.他环顾四周,除了自己刚刚进来的门,还有一扇通往未知的门,他认为滴答声就在这里面.王垠走进了房间,发现里面有好几堵墙,墙好像是由什么小方块砌
+      成的,每个小方块都在滴滴答答响,在诉说着自己.他手头没有照明设备,就把中厅里的怪火拿了起来,碟子冰冰凉,下面沾满了一层霜,他抹掉了一些,发现上面
+      有字:<br />
+&nbsp;&nbsp;"黑暗能钠灯 当心低温 生产日期在底部"<br />
+&nbsp;&nbsp;王垠被这些字样绕晕了:什么黑暗能..钠灯?为啥作为灯还会产生低温?他又好奇看了看底部,上面是激光印的:"20380224""2038年?怕是我爹还没出生
+      ,怎么还会这东西还这么新?"他拿着碟子走进那个房间,去看一看噼里啪啦是什么的响声.在他踏入房间的那一刻,发生了一件更不科学的事情,整个房间都被这
+      个小火苗照亮了,同时碟子也变得很冷,他就把碟子放在地上,搓搓手,仔细观察离自己最近的那堵墙,发现里面是由一个个继电器堆积成的.<br />
       最后更新于2021/05/18 <b>Tue</b>
     </p>
   </body>
