--- a/000.html
+++ b/000.html
@@ -7,6 +7,6 @@
     <h1>东北故事</h1>
     <p>Dongbei Story<br/></p>
     
-    <a href="000-000.html">☞ 《叁捌年》第一章 时空梦</a>
+    <a href="000-000.html">☞ 《叁捌年》第一章 时空梦 (约2000字)</a>
   </body>
 </html>
