--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>东北故事</h1>
-    <p>Dongbei Story<br/></p>
+    <p>Dongbei Story <i>Since 2021 By bihn05</i><br/></p>
     
     <a href="000.html">☞ 《叁捌年》</a>
   </body>
